# react-trace

./: .dockerignore  ARTIFACT-OOPSLA25.md  CITATION.cff  Dockerfile  LICENSE  README.md  dune-project  flake.nix  react_trace.opam  setup-docker.sh
frontend/components/: tree-node.tsx
lib/: default_event_q.ml  default_recorder.ml  default_recorder.mli  dune  interp.ml  interp.mli  interp_effects.ml  js_syntax.ml  logger.ml
lib/domains/: concrete_domains.ml  domains.ml  dune  lexer.mll  parser.mly  syntax.ml
lib/recorder_intf/: dune
samples/: cat.ml  complex.ml  counter.ml  curious.ml  curious1.ml  curious2.ml  demo.ml  hello.ml  set-before-bind.ml  simple.ml  waterfall.ml
samples/learn-react/: conditional_rendering.ml  queueing_a_series_of_state_updates.ml  your_ui_as_a_tree.ml
samples/oopsla25/: infinite-render.ml  peculiarity-usestate.ml  top-level-setter.ml  unnecessary-re-render-inter.ml  unnecessary-re-render.ml
test/: README.md  dune  test_react_trace.ml
test-react-side/: README.md  package-lock.json  package.json
test-react-side/src/: child_changes_after_rerender.jsx  child_changes_after_rerender.test.jsx  set_passed_invalid_phase.test.jsx
visualizer/: components.json  package.json
visualizer/app/: globals.css  layout.tsx
visualizer/components/: code-pane.tsx  info-pane.tsx  nav-bar.tsx  viz-pane.tsx
visualizer/store/: useAppState.ts
